--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "crypto": "^1.0.1",
+    "node-fetch": "^3.3.2",
     "poru": "^4.2.2",
     "tsc": "^2.0.4",
     "undici": "^5.23.0"
