--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "poru-deezer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": " tsc && gen-esm-wrapper ./dist/index.js ./dist/index.mjs",
     "test": "npm run build && node ./test/index.js"
